try handle new user message

--- a/config-example.json
+++ b/config-example.json
@@ -3,6 +3,9 @@
     "discordAppId": "Get this token from the Bot section of your App Registration in Discord after you've add your bot to your server",
     "discordListenChannelId": "Use * for all, for a specific channel you basically have to watch incoming messages to find the channel ID you want",
     "discordPostChannelId": "The channel the bot will post on -- it can only send/edit/react to messages on a single channel.",
+    "discordIgnoreUsers": [
+        "list of user ids you want to ignore, the bot will itself will be ignored by default to avoid looping messages, to ignore other bots, use: bot"
+    ],
     "simpleChatDataFile": "/var/www/chat/data/chatlog.json",
     "maxChatLength": 100
 }
