try add image rotation

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "discord.js": "12.5.3",
         "express": "4.17.1",
+        "jpeg-autorotate": "*",
         "fs": "*",
         "https": "*"
     }
