--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "discord.js": "12.5.3",
         "express": "4.17.1",
         "jpeg-autorotate": "*",
+        "sharp": "*",
         "fs": "*",
         "https": "*"
     }
